--- a/drivers/linuxcnc/server/linuxcncserver.cbp
+++ b/drivers/linuxcnc/server/linuxcncserver.cbp
@@ -49,7 +49,6 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-O0" />
-					<Add option="--std=c++11" />
 					<Add option="-DULAPI" />
 					<Add option="-D_LINUX" />
 					<Add directory="$(LINUXCNC)/src/emc/usr_intf" />
@@ -57,6 +56,7 @@
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/build/include" />
+					<Add directory="/usr/include/linuxcnc" />
 				</Compiler>
 				<Linker>
 					<Add library="linuxcnchal" />
@@ -80,6 +80,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="linuxcnc.cpp" />
+		<Unit filename="linuxcnc.h" />
+		<Unit filename="main.cpp" />
 		<Unit filename="../../../include/cnccomms.h" />
 		<Unit filename="../../../include/cncserver.h" />
 		<Unit filename="../../../include/timer.h" />
@@ -87,9 +90,6 @@
 		<Unit filename="../../../src/cncplugin.cpp" />
 		<Unit filename="../../../src/cncserver.cpp" />
 		<Unit filename="../../../src/timer.cpp" />
-		<Unit filename="linuxcnc.cpp" />
-		<Unit filename="linuxcnc.h" />
-		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
