--- a/drivers/linuxcnc/plugin/linuxplugin.cbp
+++ b/drivers/linuxcnc/plugin/linuxplugin.cbp
@@ -9,14 +9,19 @@
 			<Target title="Debug-Linux">
 				<Option platforms="Unix;" />
 				<Option output="../../../bin/plugins/i386-linux-gnu/$(PROJECT_NAME)_d" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="../../../../../scanything" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
+				<Option host_application="/home/linuxcnc/Documents/src/scanything/scanything" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-fvisibility=hidden" />
+					<Add option="--std=c++11" />
+					<Add option="-O0" />
 					<Add option="-D_DEBUG" />
 					<Add option="-D_LINUX" />
+					<Add option="-DMSGPACK_USE_CPP03" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
@@ -24,8 +29,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="-fvisibility=hidden" />
-					<Add library="zmq-4.2.3" />
-					<Add library="protobuf-lite-3.1.0" />
 					<Add directory="../../../libraries/lib/i386-linux-gnu/" />
 				</Linker>
 			</Target>
@@ -38,7 +41,9 @@
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-fvisibility=hidden" />
+					<Add option="--std=c++11" />
 					<Add option="-D_LINUX" />
+					<Add option="-DMSGPACK_USE_CPP03" />
 					<Add directory="../../../include" />
 					<Add directory="../../../src" />
 					<Add directory="../../../libraries/include" />
@@ -46,8 +51,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="zmq-4.2.3" />
-					<Add library="protobuf-lite-3.1.0" />
 					<Add directory="../../../libraries/lib/i386-linux-gnu/" />
 				</Linker>
 			</Target>
