Fixed auto build for LinuxCNC plugin Fixed commands such as MDI always returning false in LiuxCNC plugin

--- a/drivers/linuxcnc/server/makefile
+++ b/drivers/linuxcnc/server/makefile
@@ -9,26 +9,30 @@ endif
 SRCDIR=src
 
 IDIR =include
-CFLAGS=-I$(IDIR) -I$(LINUXCNC_INCLUDE) -DULAPI -D_LINUX -O3
+CFLAGS=-I$(IDIR) -I./  -I$(LINUXCNC_INCLUDE) -DULAPI -D_LINUX -O3
 
 ODIR=obj
 
 LINKFLAGS= -L../../../lib -L ../../../../libraries/build/lib -lm -llinuxcnchal -llinuxcnc -lnml -lpthread -llinuxcncini -llinear -ltv -luv
 
-DEPS = $(wildcard include/*.h) $(wildcard $(LINUXCNC_INCLUDE)*.h)
-#DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+HDRS := $(wildcard include/*.h) $(wildcard $(LINUXCNC_INCLUDE)*.h)
+HDRS := $(filter-out include/version.h, $(HDRS))
 
 _OBJ = linuxcnc.o main.o cnccomms.o cncplugin.o cncserver.o timer.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
-
-$(ODIR)/%.o: $(SRCDIR)/%.cpp $(DEPS)
-	@echo Building $<
-	@$(CXX) -w -c -o $@ $< $(CFLAGS)
-
 cncremote-linuxcnc: $(OBJ)
 	@echo linking $@
 	@$(CXX) -o $@ $^ $(CFLAGS) $(LINKFLAGS)
+
+$(IDIR)/version.h: $(HDRS)
+	@echo Creating $@
+	@./version.sh
+
+$(ODIR)/%.o: $(SRCDIR)/%.cpp $(HDRS) $(IDIR)/version.h
+	@echo Building $<
+	@$(CXX) -w -c -o $@ $< $(CFLAGS)
+
 
 .PHONY: clean
 
