--- a/drivers/linuxcnc/plugin/linuxplugin.cbp
+++ b/drivers/linuxcnc/plugin/linuxplugin.cbp
@@ -14,7 +14,9 @@
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option host_application="/home/lathe/Documents/src/scanything/scanything" />
+				<Option run_host_application_in_terminal="0" />
 				<Compiler>
+					<Add option="-fpic" />
 					<Add option="-g" />
 					<Add option="-fvisibility=hidden" />
 					<Add option="--std=c++11" />
@@ -34,6 +36,7 @@
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-fpic" />
 					<Add option="-O3" />
 					<Add option="-fvisibility=hidden" />
 					<Add option="--std=c++11" />
@@ -57,7 +60,6 @@
 		<Unit filename="../../../clsocket/src/PassiveSocket.h" />
 		<Unit filename="../../../clsocket/src/SimpleSocket.h" />
 		<Unit filename="../../../clsocket/src/StatTimer.h" />
-		<Unit filename="main.cpp" />
 		<Unit filename="../../../include/cncclient.h" />
 		<Unit filename="../../../include/cnccomms.h" />
 		<Unit filename="../../../include/cncplugin.h" />
@@ -68,6 +70,7 @@
 		<Unit filename="../../../src/cnccomms.cpp" />
 		<Unit filename="../../../src/cncplugin.cpp" />
 		<Unit filename="../../../src/timer.cpp" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
